--- a/BARBIE 2/index.html
+++ b/BARBIE 2/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbie</title>
+    <!-- <link rel="icon" href="./favicon.png" type="image/png"> -->
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 <section class="grid">
@@ -91,36 +92,3 @@
 </body>
 
 </html>
-<!-- <section class="grid"> 
-     <header>
-        <button class="entrar">Entrar</button>
-        <input type="text" placeholder="Buscar no SpeakOut" class="pesquisar">
-    </header>
-    <div class="menu">
-            
-    </div>
-    <section class="feed">
-        <div class="postbox">
-            oi
-        </div>
-        <div class="postbox">
-            aaaa
-        </div>
-        <div class="postbox">
-            uuuuu
-        </div>
-        <div id="BodyCss" contenteditable>
-            <span>TT</span>
-            <img class="imagemCss" src="./assets/iconchat.png">
-            <img class="imagemCss2" src="./assets/profilecircle.png">
-          </div>
-          <div className="label">
-            <div className="text">
-                <p class="Paragrafo">fulana</p>
-            </div>
-          </div>
-
-    </div>
-    </div>
-    </section>    
-    </section> -->
